--- a/.github/workflows/on-push-master.yml
+++ b/.github/workflows/on-push-master.yml
@@ -1,24 +1,24 @@
-name: on push
+# name: on push
 
-on:
-  push:
-    branches:
-     # - main
+# on:
+#   push:
+#     branches:
+#      # - main
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
 
-    steps:
+#     steps:
 
-    - uses: actions/checkout@v2
+#     - uses: actions/checkout@v2
 
-    - uses: ruby/setup-ruby@477b21f02be01bcb8030d50f37cfec92bfa615b6
-      with:
-        ruby-version: "2.6.3"
+#     - uses: ruby/setup-ruby@477b21f02be01bcb8030d50f37cfec92bfa615b6
+#       with:
+#         ruby-version: "2.6.3"
 
-    - name: Run script file
-      run: |
-         chmod +x ./hello.sh
-         ./hello.sh
-      shell: bash
+#     - name: Run script file
+#       run: |
+#          chmod +x ./hello.sh
+#          ./hello.sh
+#       shell: bash
